# atlas-clone

./: .gitignore  .gitmodules  CMakeLists.txt  QualityTables.cpp  QualityTables.h  README.md  Readme  SFS.cpp  SFS.h  TAlignment.cpp  TAlignment.h  TAlignmentMerger.cpp  TAlignmentMerger.h  TAlignmentParser.cpp  TAlignmentParser.h  TAlleleCountEstimator.cpp  TAlleleCountEstimator.h  TAllelicDepthCounts.cpp  TAllelicDepthCounts.h  TAtlasTest.cpp  TAtlasTest.h  TAtlasTestList.h  TAtlasTestPMD.cpp  TAtlasTestPMD.h  TAtlasTestRecalibration.cpp  TAtlasTestRecalibration.h  TAtlasTesting.cpp  TAtlasTesting.h  TBamDiagnoser.cpp  TBamFilter.cpp  TBamFilter.h  TBase.cpp  TBase.h  TBed.cpp  TBed.h  TBedReader.cpp  TBedReader.h  TCaller.cpp  TCaller.h  TChromosomes.cpp  (+109 more)
BAM/: BAMData.h  BamData.cpp  BamData.h  CMakeLists.txt  TAlignment.cpp  TAlignment.h  TAlignmentBlacklist.cpp  TAlignmentBlacklist.h  TAlignmentList.cpp  TAlignmentList.h  TAlignmentTraverser.cpp  TAlignmentTraverser.h  TBamFile.cpp  TBamFile.h  TBamFilter.cpp  TBamFilter.h  TBamFilters.cpp  TBamFilters.h  TBamReadMask.cpp  TBamReadMask.h  TBamWindow.cpp  TBamWindow.h  TBase.cpp  TBase.h  TBaseFilter.cpp  TBaseFilter.h  TBed.cpp  TBed.h  TBedReader.cpp  TBedReader.h  TBedReaderWindows.cpp  TBedReaderWindows.h  TChromosomes.cpp  TChromosomes.h  TCigar.cpp  TCigar.h  TFastaBuffer.cpp  TFastaBuffer.h  TGenomePosition.cpp  TGenomePosition.h  (+36 more)
BAM/tests/: CMakeLists.txt  TBamFile_Test.cpp  TBed_Test.cpp  TCigarTests.cpp  TGenomePosition_Test.cpp  TTestBamFile.cpp  TTestBamFile.h  TypesTests.cpp
GLF/: CMakeLists.txt  TBgzWriter.h  TGLF.cpp  TGLF.h  TGLFIndex.cpp  TGLFIndex.h  TGLFMultiReader.cpp  TGLFMultiReader.h  TGLFReader.cpp  TGLFReader.h  TGLFWriter.cpp  TGLFWriter.h  TGlfMultiReader.cpp  TGlfMultiReader.h
GLF/tests/: TGLF_Test.cpp  TTestGLFFile.cpp  TTestGLFFile.h
GenomeTasks/: CMakeLists.txt  TAlignmentMerger.cpp  TAlignmentMerger.h  TAlignmentStorage.cpp  TAlignmentStorage.h  TAlignmentTraverser.h  TAllelicDepthCounts.cpp  TAllelicDepthCounts.h  TBamDiagnoser.cpp  TBamDiagnoser.h  TBamDownsampler.cpp  TBamDownsampler.h  TBamFilter.cpp  TBamFilter.h  TBamReadMask.cpp  TBamReadMask.h  TBamTraverser.cpp  TBamTraverser.h  TBamWindowTraverser.cpp  TBamWindowTraverser.h  TBamWindows.cpp  TBamWindows.h  TBaseFilter.cpp  TBaseFilter.h  TCaller.cpp  TCaller.h  TContextErrors.cpp  TContextErrors.h  TContextQuantifer.cpp  TContextQuantifer.h  TContextQuantifier.h  TCreateBedMask.cpp  TCreateBedMask.h  TDepthCalculator.cpp  TDepthCalculator.h  TDepthWriter.cpp  TDepthWriter.h  TDownsamplePicker.cpp  TDownsamplePicker.h  TDuplicateQuantifier.cpp  (+71 more)
GenomeTasks/tests/: TTestAlignmentMerger.cpp
GenotypeLikelihoods/: CMakeLists.txt  GenotypeData.h  GenotypeFunctions.h  RecalEstimatorTools.cpp  RecalEstimatorTools.h  TAlleles.cpp  TAlleles.h  TBase.cpp  TBase.h  TEpsilon.cpp  TEpsilon.h  TErrorEstimator.cpp  TErrorEstimator.h  TErrorModels.cpp  TErrorModels.h  TGenotypeData.cpp  TGenotypeData.h  TGenotypeDistribution.cpp  TGenotypeDistribution.h  TGenotypeLikelihoodCalculator.cpp  TGenotypeLikelihoodCalculator.h  TGenotypeLikelihoods.cpp  TGenotypeLikelihoods.h  TGenotypeMap.h  TGenotypePrior.h  TPMDFunction.cpp  TPMDFunction.h  TPMDTables.cpp  TPMDTables.h  TPMDType.cpp  TPMDType.h  TPostMortemDamage.cpp  TPostMortemDamage.h  TQualityMap.h  TRecalibration.cpp  TRecalibration.h  TRecalibrationBQSR.cpp  TRecalibrationBQSR.h  TRecalibrationEMEstimator.cpp  TRecalibrationEMEstimator.h  (+22 more)
GenotypeLikelihoods/PMD/: TFunction.cpp  TFunction.h  TModel.cpp  TModel.h  TModels.cpp  TModels.h  TPerFragmentLength.h  (+4 more)
PopulationTools/: CMakeLists.txt  TAlleleCountEstimator.cpp  TAlleleCountEstimator.h  TAlleleCountFileFormat.cpp  TAlleleCountFileFormat.h  TAlleleCountReader.cpp  TAlleleCountReader.h  TAlleleFrequencyEstimator.cpp  TAlleleFrequencyEstimator.h  TAncestralAlleleEstimator.cpp  TAncestralAlleleEstimator.h  TBgzWriter.h  TDistanceEstimator.cpp  TDistanceEstimator.h  TF2Estimator.cpp  TF2Estimator.h  TFastaToFastq.cpp  TFastaToFastq.h  TGLF.cpp  TGLF.h  TGLFIndexer.cpp  TGLFIndexer.h  TGLFPrinter.cpp  TGLFPrinter.h  TGenotypeFrequencies.cpp  TGenotypeFrequencies.h  THardyWeinbergTest.cpp  THardyWeinbergTest.h  TInbreedingEstimator.cpp  TInbreedingEstimator.h  TMajorMinor.cpp  TMajorMinor.h  TMajorMinorMLE.h  TPolymorhicWindowIdentifier.cpp  TPolymorhicWindowIdentifier.h  TPolymorphicWindowIdentifier.cpp  TPolymorphicWindowIdentifier.h  TPopulationLikelihoodLocus.cpp  TPopulationLikelihoodLocus.h  TPopulationLikelihoodStorage.h  (+12 more)
Simulations/: CMakeLists.txt  SFS.cpp  SFS.h  TFastqFile.cpp  TFastqFile.h  TFragmentLengthDistribution.cpp  TFragmentLengthDistribution.h  THaplotypeSimulator.cpp  THaplotypeSimulator.h  TReadSimulator.cpp  TReadSimulator.h  TReadSimulators.cpp  TReadSimulators.h  TSimulatedOutputFile.h  TSimulatedOutputFiles.cpp  TSimulatedOutputFiles.h  TSimulator.cpp  TSimulator.h  TSimulatorAlleleIndex.h  TSimulatorAuxiliaryTools.cpp  TSimulatorAuxiliaryTools.h  TSimulatorBamFiles.cpp  TSimulatorBamFiles.h  TSimulatorDistributions.h  TSimulatorHaplotypes.cpp  TSimulatorHaplotypes.h  TSimulatorMutationtable.cpp  TSimulatorMutationtable.h  TSimulatorQuality.cpp  TSimulatorQuality.h  TSimulatorQualityTransformation.cpp  TSimulatorQualityTransformation.h  TSimulatorRead.cpp  TSimulatorRead.h  TSimulatorReadGroupInfo.cpp  TSimulatorReadGroupInfo.h  TSimulatorReadLength.cpp  TSimulatorReadLength.h  TSimulatorReference.cpp  TSimulatorReference.h  (+7 more)
TestUtilities/: CMakeLists.txt  TAtlasTest.cpp  TAtlasTest.h  TAtlasTestFilter.cpp  TAtlasTestFilter.h  TAtlasTestMergePairs.cpp  TAtlasTestMergePairs.h  TAtlasTestPMD.cpp  TAtlasTestPMD.h  TAtlasTestRecalibration.cpp  TAtlasTestRecalibration.h  TTestBamFile.cpp  TTestBamFile.h  TTestGLFFile.cpp  TTestGLFFile.h  TVcfTest.cpp  TVcfTest.h
VCF/: CMakeLists.txt  TVCFCompare.cpp  TVCFCompare.h  TVCFFields.h  TVcfCompare.cpp  TVcfCompare.h  TVcfConverter.cpp  TVcfConverter.h  TVcfDiagnostics.cpp  TVcfDiagnostics.h  TVcfFile.cpp  TVcfFile.h  TVcfParser.cpp  TVcfParser.h
bamtools/: CMakeLists.txt
(+428 files in other folders)
